# memeLens

./: .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  README.md  TASKS.md  TESTS.md  feature_list.json  implementation-notes-ui.html  implementation-notes.md  init.ps1  init.sh  progress.md  pyproject.toml  session-handoff.md  start.ps1  start.sh
backend/: .env.example  clients.py  config.py  decoder.py  enrich_cognee.py  ingest.py  main.py  mutation.py  schemas.py  search.py  storage.py  translate.py
data/: imgflip_memes.json  rrf_sweep_report.json
data/knowyourmeme_latest/: index.json
data/knowyourmeme_latest/information/: 001-will-smith-tada-presenting.json  002-excuse-me-sir-billy-butcher-edits.json  003-realistic-troll-face-hey-you-might-know-me-already.json  004-planetronika.json  005-everyone-get-in-the-car-we-re-leaving-this-town-now-hermit-purple.json  006-scooby-doo-creepy-run.json  007-anita-sarkeesian-slay-the-spire-2-credit-controversy.json  008-someone-should-do-it-somebody-has-to-do-it.json  009-scientology-run-speedrun.json  010-sonion.json  (+215 more)
data/knowyourmeme_latest_test/: index.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js
scripts/: _check_graph.py  _s3_make_public.py  backfill_kym_images.py  compute_mutation_metrics.py  crawl_knowyourmeme.py  crawl_knowyourmeme_playwright.py  crawl_reddit.py  fetch_imgflip.py  gen_kym_seed_urls.py  kym_scraper_bookmarklet.js  merge_kym_scrape.py  migrate_images_to_s3.py  rrf_sweep.py  seed_variation_edges.py  translate_captions.py
(+5 files in other folders)
