[project]
name = "memelens"
version = "0.1.0"
description = "Multi-vector, multi-modal meme discovery engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "httpx>=0.27",
    "praw>=7.7",
    "requests>=2.31",
    "Pillow>=10.0",
    "pytesseract>=0.3.13",
    "qdrant-client>=1.12",
    "neo4j>=5.20",
    "twelvelabs>=1.0.0",
    "mistralai>=1.2,<2",
    "cognee>=0.1.41",
    "boto3>=1.34",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "cloudscraper>=1.2.71",
    "playwright>=1.60.0",
]

[tool.uv]
package = false
